apps/sbom-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sbom
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
