apps/sbom-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbom-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sbom-app
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
